Hide monitor-only fields until monitoring category

--- a/index.html
+++ b/index.html
@@ -1012,11 +1012,11 @@
                   <label for="autoGearAddQuantity" id="autoGearAddQuantityLabel">Qty</label>
                   <input type="number" id="autoGearAddQuantity" min="1" value="1" />
                 </div>
-                <div class="auto-gear-field">
+                <div class="auto-gear-field" hidden>
                   <label for="autoGearAddScreenSize" id="autoGearAddScreenSizeLabel">Screen size</label>
                   <input type="text" id="autoGearAddScreenSize" inputmode="decimal" />
                 </div>
-                <div class="auto-gear-field">
+                <div class="auto-gear-field" hidden>
                   <label for="autoGearAddSelectorType" id="autoGearAddSelectorTypeLabel">Selector</label>
                   <select id="autoGearAddSelectorType">
                     <option value="none">No selector</option>
@@ -1024,11 +1024,11 @@
                     <option value="directorMonitor">Director monitor selector</option>
                   </select>
                 </div>
-                <div class="auto-gear-field">
+                <div class="auto-gear-field" hidden>
                   <label for="autoGearAddSelectorDefault" id="autoGearAddSelectorDefaultLabel">Default item</label>
                   <input type="text" id="autoGearAddSelectorDefault" list="autoGearMonitorCatalog" />
                 </div>
-                <div class="auto-gear-field auto-gear-checkbox-field">
+                <div class="auto-gear-field auto-gear-checkbox-field" hidden>
                   <input type="checkbox" id="autoGearAddSelectorInclude" />
                   <label for="autoGearAddSelectorInclude" id="autoGearAddSelectorIncludeLabel">Include selector</label>
                 </div>
@@ -1055,11 +1055,11 @@
                   <label for="autoGearRemoveQuantity" id="autoGearRemoveQuantityLabel">Qty</label>
                   <input type="number" id="autoGearRemoveQuantity" min="1" value="1" />
                 </div>
-                <div class="auto-gear-field">
+                <div class="auto-gear-field" hidden>
                   <label for="autoGearRemoveScreenSize" id="autoGearRemoveScreenSizeLabel">Screen size</label>
                   <input type="text" id="autoGearRemoveScreenSize" inputmode="decimal" />
                 </div>
-                <div class="auto-gear-field">
+                <div class="auto-gear-field" hidden>
                   <label for="autoGearRemoveSelectorType" id="autoGearRemoveSelectorTypeLabel">Selector</label>
                   <select id="autoGearRemoveSelectorType">
                     <option value="none">No selector</option>
@@ -1067,11 +1067,11 @@
                     <option value="directorMonitor">Director monitor selector</option>
                   </select>
                 </div>
-                <div class="auto-gear-field">
+                <div class="auto-gear-field" hidden>
                   <label for="autoGearRemoveSelectorDefault" id="autoGearRemoveSelectorDefaultLabel">Default item</label>
                   <input type="text" id="autoGearRemoveSelectorDefault" list="autoGearMonitorCatalog" />
                 </div>
-                <div class="auto-gear-field auto-gear-checkbox-field">
+                <div class="auto-gear-field auto-gear-checkbox-field" hidden>
                   <input type="checkbox" id="autoGearRemoveSelectorInclude" />
                   <label for="autoGearRemoveSelectorInclude" id="autoGearRemoveSelectorIncludeLabel">Include selector</label>
                 </div>
