Fix length unit preference select relabeling

--- a/index.html
+++ b/index.html
@@ -994,6 +994,13 @@
             </select>
           </div>
           <div class="form-row">
+            <label for="settingsLengthUnit" id="settingsLengthUnitLabel">Length unit</label>
+            <select id="settingsLengthUnit">
+              <option value="metric">Meters (m)</option>
+              <option value="imperial">Feet &amp; inches (ft/in)</option>
+            </select>
+          </div>
+          <div class="form-row">
             <label for="settingsFontSize" id="settingsFontSizeLabel">Font size</label>
             <select id="settingsFontSize">
               <option value="12">12px (Smaller)</option>
