--- a/index.html
+++ b/index.html
@@ -794,24 +794,7 @@
           aria-controls="settingsPanel-general"
           aria-selected="true"
         >
-          <span class="settings-tab-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <path
-                d="M9.593 3.94c.09-.542.559-.94 1.11-.94h2.594c.55 0 1.019.398 1.11.94l.213 1.281c.062.374.312.686.644.87.074.041.147.083.22.127.332.183.721.257 1.076.124l1.217-.456a1.125 1.125 0 0 1 1.369.491l1.297 2.246a1.125 1.125 0 0 1-.259 1.431l-1.004.826c-.293.241-.438.612-.431.991.001.042.002.084.002.127s0 .085-.002.127c-.007.379.138.75.431.991l1.004.827a1.125 1.125 0 0 1 .259 1.43l-1.297 2.247a1.125 1.125 0 0 1-1.369.49l-1.217-.455a1.35 1.35 0 0 0-1.076.124 5.58 5.58 0 0 1-.864.495 1.35 1.35 0 0 0-.644.87l-.213 1.281c-.09.542-.559.94-1.11.94H10.703a1.125 1.125 0 0 1-1.11-.94l-.214-1.281a1.35 1.35 0 0 0-.644-.87 5.446 5.446 0 0 1-.864-.495 1.35 1.35 0 0 0-1.076-.124l-1.217.455a1.125 1.125 0 0 1-1.369-.49L3.557 15.377a1.125 1.125 0 0 1 .259-1.431l1.004-.826c.292-.241.437-.613.43-.992a4.643 4.643 0 0 1-.002-.254c0-.042.001-.084.002-.127.007-.379-.138-.75-.43-.991l-1.005-.827A1.125 1.125 0 0 1 3.557 8.623l1.297-2.246a1.125 1.125 0 0 1 1.369-.491l1.217.456c.355.133.75.072 1.076-.124.073-.044.147-.086.22-.127.332-.183.582-.495.644-.87l.213-1.281Z"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </span>
+          <span class="settings-tab-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE8B1;</span>
           <span class="settings-tab-label">General</span>
         </button>
         <button
@@ -823,20 +806,7 @@
           aria-selected="false"
           tabindex="-1"
         >
-          <span class="settings-tab-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <circle cx="6.5" cy="7" r="2.5" stroke="currentColor" stroke-width="1.5" />
-              <circle cx="17.5" cy="7" r="2.5" stroke="currentColor" stroke-width="1.5" />
-              <circle cx="12" cy="17.5" r="2.5" stroke="currentColor" stroke-width="1.5" />
-              <path
-                d="m8.5 8.5 3.5 3.5 3.5-3.5M12 12l-3 4.25M12 12l3 4.25"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </span>
+          <span class="settings-tab-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE49C;</span>
           <span class="settings-tab-label">Automatic Gear</span>
         </button>
         <button
@@ -848,18 +818,7 @@
           aria-selected="false"
           tabindex="-1"
         >
-          <span class="settings-tab-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <circle cx="12" cy="6.5" r="2.25" stroke="currentColor" stroke-width="1.5" />
-              <path
-                d="M5 11h14M12 8.75V19M8.5 19.5l3.5-7 3.5 7"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </span>
+          <span class="settings-tab-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xF392;</span>
           <span class="settings-tab-label">Accessibility</span>
         </button>
         <button
@@ -871,26 +830,7 @@
           aria-selected="false"
           tabindex="-1"
         >
-          <span class="settings-tab-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <rect
-                x="4.75"
-                y="7.75"
-                width="14.5"
-                height="9.5"
-                rx="2"
-                stroke="currentColor"
-                stroke-width="1.5"
-              />
-              <path
-                d="M12 4v3.5M10.25 5.75 12 4l1.75 1.75M12 16.75V20M10.25 18.25 12 20l1.75-1.75"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </span>
+          <span class="settings-tab-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE5BD;</span>
           <span class="settings-tab-label">Backup &amp; Restore</span>
         </button>
         <button
@@ -902,32 +842,7 @@
           aria-selected="false"
           tabindex="-1"
         >
-          <span class="settings-tab-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <ellipse
-                cx="12"
-                cy="7"
-                rx="6.5"
-                ry="3.5"
-                stroke="currentColor"
-                stroke-width="1.5"
-              />
-              <path
-                d="M5.5 7v7c0 1.93 2.91 3.5 6.5 3.5s6.5-1.57 6.5-3.5V7"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M5.5 12c0 1.93 2.91 3.5 6.5 3.5s6.5-1.57 6.5-3.5"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </span>
+          <span class="settings-tab-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xE5C7;</span>
           <span class="settings-tab-label">Data &amp; Storage</span>
         </button>
         <button
@@ -939,24 +854,7 @@
           aria-selected="false"
           tabindex="-1"
         >
-          <span class="settings-tab-icon icon-glyph icon-svg" aria-hidden="true">
-            <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
-              <path
-                d="M20 11.5c0 4.694-3.806 8.5-8.5 8.5-1.166 0-2.28-.235-3.292-.662L4 20l.676-4.208A8.463 8.463 0 0 1 3.5 11.5C3.5 6.806 7.306 3 12 3s8 3.806 8 8.5Z"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M12 9.25c0-.69.56-1.25 1.25-1.25S14.5 8.56 14.5 9.25c0 .69-.56 1.25-1.25 1.25-.69 0-1.25.56-1.25 1.25v.5M12 15.75h.01"
-                stroke="currentColor"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </span>
+          <span class="settings-tab-icon icon-glyph" aria-hidden="true" data-icon-font="uicons">&#xEA4F;</span>
           <span class="settings-tab-label">About &amp; Support</span>
         </button>
       </div>
